# rust-succinct

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
benches/: succinct_bench.rs  succinct_bit_vector_bench.rs
ci/: before_script.sh  functions.sh  script.sh
src/: bit_vector.rs  lib.rs  louds.rs  succinct.rs  succinct_bit_vector.rs
src/bit_vector/: bit_vector.rs  bit_vector_builder.rs  bit_vector_string.rs  blocks.rs  chunks.rs
src/internal_data_structure/: raw_bit_vector.rs
src/louds/: louds_builder.rs
src/succinct/: bit_vector.rs  internal_data_structure.rs
src/succinct/bit_vector/: bit_vector.rs  bit_vector_builder.rs
src/succinct/internal_data_structure/: bit_vector_string.rs  popcount_table.rs  raw_bit_vector.rs
tests/: succinct_bit_vector_test.rs
