[package]
name = "succinct"
version = "0.1.0"
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
description = "Succinct Data Structures for Rust"
repository = "https://github.com/laysakura/succinct.rs"
homepage = "https://github.com/laysakura/succinct.rs"
edition = "2018"

[dependencies]

[dev-dependencies]
rand = "0.6"
